@startuml ECommerce-Analysis-Service-Package-Class-Diagram
allowmixing
left to right direction

' ============================================================
' STYLE - Visual Paradigm-like class diagram grouped by service
' ============================================================
skinparam backgroundColor white
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype ortho
skinparam packageBackgroundColor #F8FBFD
skinparam packageBorderColor #2C7DA0
skinparam packageFontColor #1A1A1A
skinparam packageFontSize 12
skinparam classBackgroundColor #AEE2F0
skinparam classBorderColor #2C7DA0
skinparam classHeaderBackgroundColor #5BA3C2
skinparam classHeaderFontColor #FFFFFF
skinparam classFontColor #000000
skinparam classFontSize 11
skinparam classAttributeFontSize 10
skinparam ArrowColor #2C7DA0
skinparam ArrowFontSize 9
skinparam ArrowFontColor #1A1A1A
skinparam Padding 4
hide circle
hide methods

title Analysis Service Package/Class Diagram - E-Commerce Microservices System

legend right
  Each package is one service boundary.
  Classes and attributes follow Class_Diagram_E_Commerce.png.
endlegend

' ============================================================
' GATEWAY
' ============================================================
package "gateway\nNginx public entrypoint" as GatewayPkg {
  class "NginxGateway" as NginxGateway <<reverse proxy>>
}

' ============================================================
' USER SERVICE
' ============================================================
package "user_service\nAuth + customer/staff UI + content" as UserPkg {
  class Customer {
    -id : int
    -username : String
    -first_name : String
    -last_name : String
    -email : String
    -password : String
    -is_staff : boolean
    -is_superuser : boolean
    -is_active : boolean
    -date_joined : DateTime
    -last_login : DateTime
  }

  class BlogPost {
    -id : int
    -title : String
    -slug : String
    -category : String
    -author : String
    -excerpt : String
    -body : String
    -hero_image_url : String
    -published_at : Date
    -created_at : DateTime
  }

  class Testimonial {
    -id : int
    -name : String
    -role : String
    -rating : int
    -quote : String
    -avatar_url : String
    -is_featured : boolean
    -created_at : DateTime
  }
}

' ============================================================
' PRODUCT SERVICE
' ============================================================
package "product_service\nCatalog API" as ProductPkg {
  class Category {
    -id : int
    -name : String
    -slug : String
    -description : String
    -hero_image_url : String
    -sort_order : int
    -is_active : boolean
  }

  class Product {
    -id : int
    -name : String
    -brand : String
    -description : String
    -image_url : String
    -price : Decimal
    -stock : int
    -created_at : DateTime
    -updated_at : DateTime
  }
}

' ============================================================
' ORDER SERVICE
' ============================================================
package "order_service\nCart + saved + compare + orders" as OrderPkg {
  class CartItem {
    -id : int
    -user_id : int
    -category_slug : String
    -category_name : String
    -product_id : int
    -product_name : String
    -product_brand : String
    -product_image_url : String
    -unit_price : Decimal
    -quantity : int
    -created_at : DateTime
    -updated_at : DateTime
  }

  class SavedItem {
    -id : int
    -user_id : int
    -category_slug : String
    -category_name : String
    -product_id : int
    -product_name : String
    -product_brand : String
    -product_image_url : String
    -unit_price : Decimal
    -created_at : DateTime
  }

  class CompareItem {
    -id : int
    -user_id : int
    -category_slug : String
    -category_name : String
    -product_id : int
    -product_name : String
    -product_brand : String
    -product_image_url : String
    -unit_price : Decimal
    -stock : int
    -created_at : DateTime
  }

  class Order {
    -id : int
    -user_id : int
    -total_amount : Decimal
    -payment_status : String
    -shipping_status : String
    -source : String
    -source_order_id : int
    -paid_at : DateTime
    -created_at : DateTime
    -updated_at : DateTime
  }

  class OrderItem {
    -id : int
    -category_slug : String
    -category_name : String
    -product_id : int
    -product_name : String
    -product_brand : String
    -product_image_url : String
    -unit_price : Decimal
    -quantity : int
  }

  class OrderShipping {
    -id : int
    -recipient_name : String
    -phone : String
    -address_line : String
    -city_or_region : String
    -postal_code : String
    -country : String
    -note : String
  }
}

' ============================================================
' PAYMENT SERVICE
' ============================================================
package "payment_service\nPayment lifecycle" as PaymentPkg {
  class Payment {
    -id : int
    -order_id : int
    -user_id : int
    -amount : Decimal
    -status : String
    -paid_at : DateTime
    -created_at : DateTime
    -updated_at : DateTime
  }
}

' ============================================================
' SHIPPING SERVICE
' ============================================================
package "shipping_service\nShipment lifecycle" as ShippingPkg {
  class Shipment {
    -id : int
    -order_id : int
    -user_id : int
    -recipient_name : String
    -phone : String
    -address_line : String
    -city_or_region : String
    -postal_code : String
    -country : String
    -note : String
    -status : String
    -created_at : DateTime
    -updated_at : DateTime
  }
}

' ============================================================
' CHATBOT SERVICE
' ============================================================
package "chatbot_service\nAI consultation + behavior events" as ChatbotPkg {
  class BehaviorEvent {
    -id : int
    -user_ref : String
    -event_type : String
    -category_slug : String
    -product_id : int
    -metadata : JSON
    -created_at : DateTime
  }

  class Recommendation <<API Response DTO>> {
    -product_id : int
    -name : String
    -category_slug : String
    -score : float
    -reason : String
  }

  class ChatbotReply <<API Response DTO>> {
    -answer : String
    -source : String
    -fallback_used : boolean
    -error_code : String
  }
}

' ============================================================
' PACKAGE LAYOUT HINTS
' These hidden links only make the diagram read like service boxes.
' ============================================================
GatewayPkg -[hidden]down- UserPkg
UserPkg -[hidden]right- ProductPkg
ProductPkg -[hidden]right- OrderPkg
OrderPkg -[hidden]right- PaymentPkg
PaymentPkg -[hidden]down- ShippingPkg
ShippingPkg -[hidden]left- ChatbotPkg

' ============================================================
' DOMAIN RELATIONSHIPS
' Format: ClassA "role mult" -- "mult role" ClassB
' "--"  : business association, no diamond
' "*--" : Composition - filled diamond at lifecycle owner
' "o--" : Aggregation - hollow diamond at shared grouping side
' "..>" : dependency / runtime use only
' ============================================================

' --- Gateway routing to service-owned classes ---
NginxGateway ..> Customer : session UI / auth API
NginxGateway ..> Product : catalog API
NginxGateway ..> Order : cart/order API
NginxGateway ..> Payment : payment API
NginxGateway ..> Shipment : shipment API
NginxGateway ..> ChatbotReply : chatbot API

' --- User content ---
Customer "author 0..1" -- "0..* posts" BlogPost : author text
Customer "quoted customer 0..1" -- "0..* testimonials" Testimonial : testimonial content

' --- Catalog ---
Category "category 1" o-- "0..* products" Product : shared catalog group

' --- Customer commerce state ---
Customer "customer 1" -- "0..* cartItems" CartItem : owns active cart
Customer "customer 1" -- "0..* savedItems" SavedItem : saves
Customer "customer 1" -- "0..* compareItems" CompareItem : compares
Customer "customer 1" -- "0..* orders" Order : places

' --- Cart / saved / compare references ---
CartItem "cartItem 0..*" -- "1 product" Product : product snapshot
SavedItem "savedItem 0..*" -- "1 product" Product : product snapshot
CompareItem "compareItem 0..*" -- "1 product" Product : product snapshot

' --- Order ---
Order "order 1" *-- "1..* items" OrderItem : composite checkout items
Order "order 1" *-- "0..1 shippingAddress" OrderShipping : composite shipping address
OrderItem "orderItem 0..*" -- "1 product" Product : product snapshot

' --- Payment / shipping ---
Order "order 1" -- "0..1 payment" Payment : payment record
Order "order 1" -- "0..1 shipment" Shipment : shipment record
Payment "payment 0..*" -- "1 customer" Customer : paid by
Shipment "shipment 0..*" -- "1 customer" Customer : delivered to

' --- AI consultation ---
Customer "customer 1" -- "0..* behaviorEvents" BehaviorEvent : asks / browses
Customer "customer 1" -- "0..* chatbotReplies" ChatbotReply : receives
BehaviorEvent "event 0..*" -- "0..1 category" Category : category context
BehaviorEvent "event 0..*" -- "0..1 product" Product : product context
ChatbotReply "reply 1" o-- "0..* recommendations" Recommendation : shared response list
Recommendation "recommendation 0..*" -- "1 product" Product : recommends
Recommendation "recommendation 0..*" -- "0..1 category" Category : category context

@enduml
